Update the underlying dependencies

--- a/package.json
+++ b/package.json
@@ -16,44 +16,47 @@
     "test": "jest",
     "watch": "webpack --watch --mode=development",
     "build:dev": "webpack --mode=development",
-    "build": "webpack -p --mode=production",
+    "build": "webpack --mode=production",
     "lint": "standard",
     "start": "zat server -p ./dist --unattended"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.1.0",
     "@zendeskgarden/css-arrows": "^3.1.1",
-    "@zendeskgarden/css-avatars": "^3.0.3",
-    "@zendeskgarden/css-bedrock": "^7.0.3",
-    "@zendeskgarden/css-buttons": "^6.0.3",
+    "@zendeskgarden/css-avatars": "^6.0.10",
+    "@zendeskgarden/css-bedrock": "^8.0.1",
+    "@zendeskgarden/css-buttons": "^8.0.0",
     "@zendeskgarden/css-callouts": "^3.0.3",
-    "@zendeskgarden/css-forms": "^6.0.5",
+    "@zendeskgarden/css-forms": "^7.0.20",
     "@zendeskgarden/css-grid": "^0.1.6",
-    "@zendeskgarden/css-menus": "^7.0.4",
+    "@zendeskgarden/css-menus": "^9.0.20",
     "@zendeskgarden/css-modals": "^6.1.2",
-    "@zendeskgarden/css-pagination": "^3.0.3",
-    "@zendeskgarden/css-tables": "^3.0.5",
-    "@zendeskgarden/css-tabs": "^5.0.3",
-    "@zendeskgarden/css-tags": "^4.0.4",
+    "@zendeskgarden/css-pagination": "^4.0.19",
+    "@zendeskgarden/css-tables": "^4.0.19",
+    "@zendeskgarden/css-tabs": "^6.0.19",
+    "@zendeskgarden/css-tags": "^5.1.15",
     "@zendeskgarden/css-tooltips": "^4.0.4",
-    "@zendeskgarden/css-utilities": "^3.0.1",
+    "@zendeskgarden/css-utilities": "^4.5.5",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.4.0",
-    "babel-loader": "^7.1.5",
+    "babel-jest": "^26.6.0",
+    "babel-loader": "^8.1.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.4.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.6",
-    "postcss-preset-env": "^5.2.1",
-    "precss": "^3.1.2",
-    "standard": "^11.0.1",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "css-loader": "^5.0.0",
+    "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.0",
+    "mini-css-extract-plugin": "^1.1.1",
+    "postcss": "^8.1.2",
+    "postcss-import": "^13.0.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-preset-env": "^6.7.0",
+    "precss": "^4.0.0",
+    "standard": "^14.3.4",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   },
   "dependencies": {}
 }
